# mgcxx

./: CMakeLists.txt  README.md  common.hpp  main.cpp  test.sh  text_search_bench.cpp  text_search_poc.cpp  text_search_stress.cpp  text_search_unit.cpp
.github/workflows/: test.yml
rust/: CMakeLists.txt  Cargo.toml
rust/src/: lib.rs
text_search/: CMakeLists.txt  Cargo.toml  bench.cpp  ci.sh  common.hpp  run.sh  test_bench.cpp  test_unit.cpp  test_util.hpp  text_search.hpp  unit.cpp
text_search/rust/src/: lib.rs
text_search/src/: lib.rs
