[package]
name = "tantivy_text_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
tantivy = "0.21.1"
log = "0.4.17"
env_logger = "0.10.0"
serde_json = "1.0.79"

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]
